<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/myqix_item_profile"
        android:key="pref_key_profile_settings">

        <!--<PreferenceScreen
            android:key="button_voicemail_setting_key"
            android:title="@string/myqix_child_personal"
            android:persistent="false">

        </PreferenceScreen>

        <PreferenceScreen android:key="button_voicemail_setting_key"
        android:title="@string/myqix_child_contact"
        android:persistent="false">

        </PreferenceScreen>-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/myqix_item_settings"
        android:key="pref_key_profile_settings">

        <PreferenceScreen
            android:key="button_voicemail_setting_key"
            android:title="@string/myqix_child_personal"
            android:persistent="false">

            <CheckBoxPreference
                android:key="pref_key_auto_delete"
                android:summary="Summary"
                android:title="Prova"
                android:defaultValue="false"/>

        </PreferenceScreen>
<!--
        <PreferenceScreen android:key="button_voicemail_setting_key"
            android:title="@string/myqix_child_contact"
            android:persistent="false">
        </PreferenceScreen>-->

    </PreferenceCategory>

    <!--<PreferenceCategory
        android:title="@string/myqix_item_account"
        android:key="pref_key_profile_settings">

        <PreferenceScreen
            android:key="button_voicemail_setting_key"
            android:title="@string/myqix_child_personal"
            android:persistent="false">

        </PreferenceScreen>

        <PreferenceScreen android:key="button_voicemail_setting_key"
            android:title="@string/myqix_child_contact"
            android:persistent="false">

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceScreen android:key="button_voicemail_setting_key"
        android:title="@string/myqix_item_language"
        android:persistent="false">

    </PreferenceScreen>-->

</PreferenceScreen>
