<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="-3dp"
        android:background="@color/transparent"
        android:indeterminate="true"
        android:indeterminateTint="@color/redStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/login_page_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Margin_sixty"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/qix_app_icon_new"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/Margin_sixtyfive_vertical"
            app:layout_constraintLeft_toRightOf="@id/Margin_thirtyfive_vertical"
            app:layout_constraintTop_toBottomOf="@id/Margin_ten"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"
            android:drawableStart="@drawable/icon_email"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textAutoComplete|textEmailAddress"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@id/Margin_fifty"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"
            android:drawableStart="@drawable/icon_key"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical"
            app:layout_constraintTop_toTopOf="@id/Margin_fifty" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background_red"
            android:enabled="true"
            android:textColor="@android:color/white"
            android:text="@string/login_button"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical"
            app:layout_constraintTop_toBottomOf="@id/Margin_sixty" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_signup"
            android:text="@string/sign_up_button_title"
            android:textColor="#ED1B24"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <Button
            android:id="@+id/passwordRecoveryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_trouble"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical"
            app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
            />

        <!--Button
            android:id="@+id/resendVerificationLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto"
            android:text="account confirmation"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            android:onClick="trial"
            app:layout_constraintLeft_toLeftOf="@id/Margin_twenty_vertical"
            app:layout_constraintRight_toLeftOf="@id/Margin_ninety_vertical"
            app:layout_constraintBottom_toTopOf="@+id/Margin_sixty"
            /-->



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_sixty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_twenty_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_ninety_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_thirtyfive_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_sixtyfive_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Margin_thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

